--- a/samples/01d_tx_timed_sleep/CMakeLists.txt
+++ b/samples/01d_tx_timed_sleep/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(ex_01d_tx_timed_sleep)
+project(01d_tx_timed_sleep)
 target_sources(app PRIVATE
   main.c
 )
