--- a/samples/07a_ack_data_tx/CMakeLists.txt
+++ b/samples/07a_ack_data_tx/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(ex_07a_ack_data_tx)
+project(07a_ack_data_tx)
 target_sources(app PRIVATE
   main.c
 )
